--- a/Python101.ipynb
+++ b/Python101.ipynb
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -451,6 +451,23 @@
    ],
    "source": [
     "print(captains.get(\"Enterprise\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Kirk\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(captains[\"Enterprise\"])"
    ]
   },
   {
